assets/less/views/start.less
@shareIconCount: 3;
@shareIconWrapSize: 80%;

@pwStrengthWidth: 40px;

.startView {
	overflow-y: auto; // make the html scroll!
	height: auto;

	.limited-width {
		margin-left: auto;
		margin-right: auto;
		width: 1100px;
	}

	body {
		padding-top: 0;
	}

	#topNav {
		position: relative;
	}

	@media @mobile {
		#container {
			padding-top: 0px;
		}

		input[type="text"], input[type=""], input[type="password"] {
			width: 100%;
		}
		#mobileLogo {
			max-width: ~"calc(100% - 58px)";
			margin: 0 29px;
		}
	}

	.spacious {
		padding-top: 48px;
		padding-bottom: 64px;
	}

	.footer {
		color: white;
		background-color: @primary;
		border-top: 24px solid @primaryLighter;
		margin: 0;
		.normal-text();

		a {
			color: white;
		}

		.left, .right {
			.limited-width;
			float: initial;
			text-align: left;
			a {
				padding-right: 8px;
				&:first-of-type {
					display: none;
				}
			}
		}
	}

	.annotatedInputContainer,
	.name, .pw,
	.error, .loginLoading {
		margin:  0px 29px;
		@media @desktop {
			margin-bottom: 14px;
		}
	}

	@media @mobile {
		#mail {
			border-radius: 5px 5px 0px 0px
		}

		#password {
			border-radius: 0px;
			border-top: none;
		}
	}

	#main {
		text-align: center;
		width: 100% !important;
		min-height: 750px;
		margin: 0 !important;

		@media @mobile {
			min-height: 100vh;
		}
		background-color: @primaryLighter;
	}

	.intermezzo {
		width: 100%;
		background-color: white;
		color: #000;
	}

	#more {
		.limited-width;
		.spacious;

		font-size: 20px;
		line-height: 32px;
		text-align: left;
	}

	.rightWrap {
		width: 400px;
		float: right;
	}

	.leftWrap {
		width: 650px;
		overflow: hidden;
		text-align: left;
		img {
			max-width: 100%;
		}
	}

	h1 {
		font-weight: bold;
		font-size: 2.4rem;
		@media @mobile {
			color: @white;
		}
	}

	.splash {
		.spacious;
		font-size: 20px;
		line-height: 32px;

		display: inline-block;

		color: #ffffff;
		box-sizing: border-box;
		position: relative;

		.limited-width;

		.leftWrap {
			min-height: 250px;
		}

		.features {
			display: block;
			text-align: center;
			width: 100%;
			clear: both;

			.feature {
				display: inline-block;
				padding-left: 20px;
				padding-right: 20px;
				margin-left: 20px;
				margin-right: 20px;
				width: 230px;
				.title {
					.fa {
						font-size: 2.3rem;
						padding-right: 5px;
					}
					padding-top: 30px;
					font-weight: bold;
					font-size: 1.5rem;
				}
				.content {
					padding-top: 12px;
				}
			}

			// no idea, but we need both of these:
			vertical-align: top;
			.feature { vertical-align: top; }
		}
	}

	.register {
		width: 100%;
		float: left;
		margin-top: 30px;
		text-align: center;
		min-height: 360px;

		&.box {
			color: black;
			background: white;

			border: 1px solid rgba(255,255,255,0.4);
			border-radius: 10px;

			font-size: 14px;
			line-height: normal;

			padding-top: 10px;
			padding-bottom: 30px;
			padding-left: 20px;
			padding-right: 20px;

			h1 {
				font-size: 24px;
				line-height: normal;
				margin-bottom: 20px;
				color: @primary;
			}

			input:not([type="submit"]):not([type="reset"]):not([type="button"]):not([type="file"]):not([type="radio"]):not([type="checkbox"]),
			.annotatedInput-container {
				width: 300px;
				height: 48px;
			}

			.annotatedInput-container {
				margin: 0 auto;
			}

			.annotatedInput-input {
				width: 100%;
			}

			button {
				font-size: 24px;
				line-height: normal;
				width: 300px;
				margin-top: 16px;
				margin-bottom: 0;
			}

			p {
				text-align: left;
				padding-left: 32px;
				padding-right: 32px;
			}

			.registerAGB {
				padding-left: 46px;
				padding-right: 28px;
				text-align: left;
				text-indent: -16px;
				font-size: 12px;
				margin:	0;
			}
		}

		#requestInvite {
			border-top: 1px solid #ccc;
			display: inline-block;
			margin-top: 0.67em;
		}

		@media @mobile {
			padding-bottom: 50px;
			.registerForm p {
				color: @white;
				padding: 0 29px;
				text-align: justify;
			}
			.inputWrap {
				.nickname {
					border-radius: 5px 5px 0 0;
				}
				.password, .password2, .registerAGB {
					border-radius: 0;
					border-top: 0;
					border-bottom: solid 1px darken(#ffffff, 45%);
				}
				.registerAGB {
					background: @white;
					 .box-shadow(inset 0px 0px 5px #ccc);
					width: ~"calc(100% - 60px)";
					margin: 0 30px;
					padding: 5px;
					.box-fix;
				}
			}
			.submitWrap {
				width: 100%;
				width: ~"calc(100% - 58px)";
				margin: 0 29px;
				button {
					width: 100%;
					margin-top: 0;
					border: solid 1px darken(#ffffff, 45%);
					border-top: none;
					border-radius: 0 0 5px 5px;
				}
			}
			.inviteCode {
				margin-top: 15px;
			}
			#requestInvite, .registerForm {
				margin-top: 35px;
				border-top: 1px solid #ccc;
			}
			#requestInviteMail {
				border-radius: 5px 5px 0 0;
			}
			#sendInviteRequest {
				width: ~"calc(100% - 58px)";
				margin: 0 29px;
				padding: 9px;
				border-radius: 0 0 5px 5px;
				border: solid 1px darken(#ffffff, 45%);
				border-top: none;
			}
		}

		.icon {
			&.fa-check { color: @green; }
			&.fa-warning { color: @orange; }
			&.fa-times { color: @red; }
		}

		@strengthInputWidth: 40px;

		.strenghInput {
			padding-right: @annotatedInputRight + @strengthInputWidth + 5px;
		}

		span[data-strength] {
			width: 40px;
			height: 8px;
			border: 1px solid gray;
			border-radius: 4px;
		}

		span[data-strength]:after {
			display: block;
			content: '';
			height: 8px;
		}

		span[data-strength="0"]:after { width: @pwStrengthWidth*(0/10); background-color: #ff0000; }
		span[data-strength="1"]:after { width: @pwStrengthWidth*(1/10); background-color: #ff4d00; }
		span[data-strength="2"]:after { width: @pwStrengthWidth*(2/10); background-color: #ff7700; }
		span[data-strength="3"]:after { width: @pwStrengthWidth*(3/10); background-color: #ffa200; }
		span[data-strength="4"]:after { width: @pwStrengthWidth*(4/10); background-color: #ffc400; }
		span[data-strength="5"]:after { width: @pwStrengthWidth*(5/10); background-color: #80d000; }
		span[data-strength="6"]:after { width: @pwStrengthWidth*(6/10); background-color: @primaryLightest; }
		span[data-strength="7"]:after { width: @pwStrengthWidth*(7/10); background-color: @primaryLighter; }
		span[data-strength="8"]:after { width: @pwStrengthWidth*(8/10); background-color: @primary; }
		span[data-strength="9"]:after { width: @pwStrengthWidth*(9/10); background-color: @primaryDarker; }
		span[data-strength="10"]:after { width: @pwStrengthWidth*(10/10); background-color: @primaryDarkest; }
	}

}

